[gd_scene load_steps=53 format=2]

[ext_resource path="res://ui/EGSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/kanbanScroll/Column.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/knob/Knob.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/OpIntentMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/voice_io/VoiceIO.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/wiringGrid/WiringGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://gfx/fonts/numerics_8x10.tres" type="BitmapFont" id=7]
[ext_resource path="res://gfx/fonts/thin_font_6x8.tres" type="BitmapFont" id=8]
[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=9]
[ext_resource path="res://gfx/fonts/numerics_5x8.tres" type="BitmapFont" id=10]
[ext_resource path="res://gfx/fonts/spelunkid_font_bold.tres" type="BitmapFont" id=11]
[ext_resource path="res://ui/main/voice/Test2.cs" type="Script" id=12]
[ext_resource path="res://ui/main/voice/MIDI.gd" type="Script" id=14]
[ext_resource path="res://ui/EGCheckBox.tres" type="Theme" id=15]
[ext_resource path="res://ui/TabContainer.theme" type="Theme" id=16]
[ext_resource path="res://ui/FileDialog.theme" type="Theme" id=17]
[ext_resource path="res://ui/main/voice/VoiceMain.gd" type="Script" id=18]
[ext_resource path="res://gfx/wave/0.png" type="Texture" id=20]
[ext_resource path="res://gfx/wave/8a.png" type="Texture" id=21]
[ext_resource path="res://gfx/wave/7.png" type="Texture" id=22]
[ext_resource path="res://gfx/wave/1.png" type="Texture" id=23]
[ext_resource path="res://gfx/wave/6.png" type="Texture" id=24]
[ext_resource path="res://gfx/wave/2.png" type="Texture" id=25]
[ext_resource path="res://gfx/wave/5.png" type="Texture" id=26]
[ext_resource path="res://gfx/wave/3.png" type="Texture" id=27]
[ext_resource path="res://gfx/wave/9.png" type="Texture" id=28]
[ext_resource path="res://gfx/wave/8.png" type="Texture" id=29]
[ext_resource path="res://ui/kanbanScroll/Kanban.gd" type="Script" id=30]
[ext_resource path="res://gfx/ui/godot_icons/Save.svg" type="Texture" id=31]
[ext_resource path="res://gfx/ui/godot_icons/Load.svg" type="Texture" id=32]
[ext_resource path="res://gfx/ui/kanban/arrange_type_column.png" type="Texture" id=33]
[ext_resource path="res://gfx/ui/kanban/voicebank.png" type="Texture" id=34]
[ext_resource path="res://gfx/ui/kanban/arrange_stack.png" type="Texture" id=35]
[ext_resource path="res://gfx/ui/kanban/arrange_group.svg" type="Texture" id=36]
[ext_resource path="res://gfx/ui/kanban/arrange_group_stacks.png" type="Texture" id=37]
[ext_resource path="res://gfx/ui/kanban/arrange_spread.svg" type="Texture" id=38]
[ext_resource path="res://ui/panels/LFOPanel.gd" type="Script" id=39]
[ext_resource path="res://ui/main/voice/FMPreview.gd" type="Script" id=40]
[ext_resource path="res://ui/main/voice/WaveformBanksTab.tscn" type="PackedScene" id=41]

[sub_resource type="Animation" id=1]
resource_name = "NoteOn"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FMPreview:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Channels:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AudioStreamGenerator" id=2]
mix_rate = 48000.0
buffer_length = 0.05

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.376471 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.337255 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.176471, 0.65098, 1, 0.439216 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.423529, 0.756863, 1, 0.439216 )

[sub_resource type="Theme" id=10]
default_font = ExtResource( 8 )
HSlider/styles/grabber_area = SubResource( 11 )
HSlider/styles/grabber_area_highlight = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.498039 )
border_color = Color( 0.8, 0.8, 0.8, 0.498039 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.305882 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.180392 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.941176 )
border_color = Color( 0.8, 0.8, 0.8, 0.498039 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 16.0
expand_margin_bottom = 12.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.278431, 0.388235, 0.564706, 0.737255 )
border_width_left = 1
border_width_top = 1
border_color = Color( 0.8, 0.8, 0.8, 0.380392 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.0784314, 0.0862745, 0.14902, 0.737255 )
border_width_left = 1
border_width_top = 1
border_color = Color( 0.8, 0.8, 0.8, 0.380392 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.058, 0.102967, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 2.0
expand_margin_bottom = 1.0
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="GDScript" id=13]
script/source = "extends Control


#When initializing the scene, set ourselves as the correct path for manually-managed windows to go.
#This allows repositioning windows on a specific part of the scene tree and also keeps popups from getting lost.
func _ready():
	global.MODELESS_VOICE_POPUPS_PATH = get_path()

"

[node name="VoiceTab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
chip_loc = NodePath("../VoiceTab/Channels")

[node name="VisFlip" type="AnimationPlayer" parent="."]
anims/NoteOn = SubResource( 1 )

[node name="MIDI Control" type="Node" parent="."]
script = ExtResource( 14 )

[node name="FMPreview" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.568627 )
margin_left = 12.0
margin_top = 256.0
margin_right = 268.0
margin_bottom = 384.0
text = "Output:"
script = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="FMPreview"]
wait_time = 0.25
autostart = true

[node name="Channels" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 12.0
margin_top = 256.0
margin_right = 276.0
margin_bottom = 400.0
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 0.552941 )
text = "WAVEFORM DISPLAY"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="AudioStreamPlayer" parent="Channels"]
stream = SubResource( 2 )
volume_db = -3.0

[node name="ChInfo" type="Label" parent="Channels"]
modulate = Color( 1, 1, 1, 0.552941 )
margin_left = 916.0
margin_top = 272.0
margin_right = 980.0
margin_bottom = 344.0
grow_horizontal = 0
grow_vertical = 0
align = 2
valign = 2

[node name="Kanban" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 280.0
margin_right = 644.0
rect_min_size = Vector2( 364, 0 )
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 30 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Column0" parent="Kanban" instance=ExtResource( 2 )]
rect_min_size = Vector2( 360, 0 )

[node name="WiringGrid" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 224.0
chip_loc = NodePath("../../VoiceTab/Channels")

[node name="LTab" type="TabContainer" parent="."]
margin_left = 8.0
margin_top = 368.0
margin_right = 272.0
margin_bottom = 560.0
rect_min_size = Vector2( 264, 0 )
theme = ExtResource( 16 )
custom_styles/panel = SubResource( 3 )
tab_align = 0
script = ExtResource( 39 )

[node name="Metadata" type="Control" parent="LTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 19.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Label" type="Label" parent="LTab/Metadata"]
margin_left = 15.0
margin_top = 25.0
margin_right = 127.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 11 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="LTab/Metadata"]
margin_left = 127.0
margin_top = 21.0
margin_right = 251.0
margin_bottom = 37.0
size_flags_horizontal = 3
theme = ExtResource( 17 )
custom_fonts/font = ExtResource( 9 )
placeholder_text = "(Instrument)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LTab/Metadata"]
margin_left = 15.0
margin_top = 53.0
margin_right = 127.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 11 )
text = "Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="TextEdit" parent="LTab/Metadata"]
margin_left = 127.0
margin_top = 49.0
margin_right = 251.0
margin_bottom = 149.0
size_flags_horizontal = 3
theme = ExtResource( 17 )
custom_fonts/font = ExtResource( 8 )
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gain" parent="LTab/Metadata" instance=ExtResource( 3 )]
margin_left = 15.0
margin_top = 101.0
margin_right = 55.0
margin_bottom = 144.0
theme = SubResource( 10 )
min_value = 0.05
max_value = 5.0
step = 0.05
value = 1.0
exp_edit = true
title = "Gain"
travel_multiplier = 10.0
notch = 0.5
thickness = 0.4
point_outwards = true
title_align = Vector2( 0.3, -0.1 )
decimal_pad = 2
value_font = ExtResource( 10 )

[node name="Pan" parent="LTab/Metadata" instance=ExtResource( 3 )]
margin_left = 71.0
margin_top = 101.0
margin_right = 111.0
margin_bottom = 144.0
theme = SubResource( 10 )
min_value = -1.0
max_value = 1.0
step = 0.01
title = "Pan"
travel_multiplier = 8.0
notch = 0.5
thickness = 0.4
point_outwards = true
title_align = Vector2( 0.3, -0.1 )
value_font = ExtResource( 7 )

[node name="LFO" type="Control" parent="LTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 19.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 256, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="WavePanel" type="Panel" parent="LTab/LFO"]
margin_left = 2.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 37.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" parent="LTab/LFO/WavePanel" instance=ExtResource( 1 )]
visible = false
margin_left = -104.0
margin_top = 8.0
margin_right = -48.0
margin_bottom = 28.0
rect_min_size = Vector2( 56, 20 )
max_value = 1023.0

[node name="Duty" parent="LTab/LFO/WavePanel" instance=ExtResource( 1 )]
margin_left = 69.0
margin_top = 4.0
margin_right = 205.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 20 )
max_value = 65535.0
value = 32767.0
associated_property = "duty"

[node name="Preview" type="TextureRect" parent="LTab/LFO/WavePanel"]
margin_left = 219.0
margin_top = 4.0
margin_right = 251.0
margin_bottom = 28.0
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="LTab/LFO/WavePanel/Preview"]
show_behind_parent = true
margin_right = 32.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Invert" type="CheckBox" parent="LTab/LFO/WavePanel"]
margin_left = 5.0
margin_top = 8.0
margin_right = 59.0
margin_bottom = 26.0
theme = ExtResource( 15 )
custom_fonts/font = ExtResource( 11 )
text = "Flip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="PopupDialog" parent="LTab/LFO/WavePanel"]
margin_left = 210.0
margin_right = 210.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 144 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LTab/LFO/WavePanel/Popup"]
anchor_right = 1.0
margin_top = -12.0
margin_right = 8.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.384314, 0.717647, 0.831373, 0.639216 )
custom_fonts/font = ExtResource( 9 )
text = "Waveform="
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="G" type="GridContainer" parent="LTab/LFO/WavePanel/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave0" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_right = 36.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 20 )

[node name="Wave1" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_left = 38.0
margin_right = 74.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 25 )

[node name="Wave2" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_top = 30.0
margin_right = 36.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 23 )

[node name="Wave3" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 30.0
margin_right = 74.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 27 )

[node name="Wave4" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_top = 60.0
margin_right = 36.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 26 )

[node name="Wave5" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 24 )

[node name="Wave6" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_top = 90.0
margin_right = 36.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 22 )

[node name="Wave7" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 90.0
margin_right = 74.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 21 )

[node name="Wave8" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_top = 120.0
margin_right = 36.0
margin_bottom = 148.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 29 )

[node name="Wave9" type="Button" parent="LTab/LFO/WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 120.0
margin_right = 74.0
margin_bottom = 148.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 28 )

[node name="+Delay" parent="LTab/LFO" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 45.0
margin_right = 255.0
margin_bottom = 65.0
rect_min_size = Vector2( 112, 20 )
max_value = 32767.0
exp_edit = true
associated_property = "Delay"
special_display = 2

[node name="Speed" parent="LTab/LFO" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 77.0
margin_right = 255.0
margin_bottom = 97.0
rect_min_size = Vector2( 64, 20 )
max_value = 127.0
value = 19.0
associated_property = "Speed"
special_display = 3

[node name="Sync" type="OptionButton" parent="LTab/LFO"]
margin_left = 8.0
margin_top = 149.0
margin_right = 127.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 11 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "None"
items = [ "None", null, false, 0, null, "Oscillator", null, false, 1, null, "End of Delay", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LTab/LFO/Sync"]
margin_top = -11.0
margin_right = 119.0
custom_fonts/font = ExtResource( 9 )
text = "Sync"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pitch Depth" parent="LTab/LFO" instance=ExtResource( 1 )]
margin_left = 135.0
margin_top = 141.0
margin_right = 255.0
margin_bottom = 161.0
rect_min_size = Vector2( 112, 20 )
max_value = 1.0
step = 0.001
associated_property = "pmd"

[node name="Amplitude Depth" parent="LTab/LFO" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 109.0
margin_right = 255.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 20 )
max_value = 1023.0
value = 1023.0
exp_edit = true
associated_property = "AMD"

[node name="Waveforms" parent="LTab" instance=ExtResource( 41 )]
visible = false
margin_right = -1.0
margin_bottom = -1.0
chip_loc = NodePath("../../Channels")

[node name="OpIntentMenu" parent="." instance=ExtResource( 4 )]
margin_left = -136.0
margin_top = 287.0
margin_right = -8.0
margin_bottom = 351.0

[node name="ModelessPopups" type="Control" parent="."]
mouse_filter = 1
script = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="IO" parent="." instance=ExtResource( 5 )]
margin_top = 600.0
margin_bottom = 600.0
mouse_filter = 2
chip_loc = NodePath("../Channels")

[node name="Btn" type="HBoxContainer" parent="."]
margin_left = 12.0
margin_top = 568.0
margin_right = 274.0
margin_bottom = 592.0
theme = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="ReloadBank" type="Button" parent="Btn"]
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "Load a different voice from the current imported bank."
icon = ExtResource( 34 )

[node name="Load" type="Button" parent="Btn"]
margin_left = 30.0
margin_right = 54.0
margin_bottom = 24.0
hint_tooltip = "Open or import a voice."
icon = ExtResource( 32 )

[node name="Save" type="Button" parent="Btn"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 24.0
hint_tooltip = "Save voice."
icon = ExtResource( 31 )

[node name="VSeparator" type="VSeparator" parent="Btn"]
margin_left = 90.0
margin_right = 94.0
margin_bottom = 24.0

[node name="Arrange0" type="Button" parent="Btn"]
margin_left = 100.0
margin_right = 124.0
margin_bottom = 24.0
hint_tooltip = "Arrange all operators together in a single tab group."
icon = ExtResource( 36 )

[node name="Arrange1" type="Button" parent="Btn"]
margin_left = 130.0
margin_right = 154.0
margin_bottom = 24.0
hint_tooltip = "Arrange operators by spreading them across all available columns."
icon = ExtResource( 38 )

[node name="VSeparator2" type="VSeparator" parent="Btn"]
margin_left = 160.0
margin_right = 164.0
margin_bottom = 24.0

[node name="Arrange3" type="Button" parent="Btn"]
margin_left = 170.0
margin_right = 194.0
margin_bottom = 24.0
hint_tooltip = "Arrange operators into columns,
based on modulation stacks to output."
icon = ExtResource( 35 )

[node name="Arrange2" type="Button" parent="Btn"]
margin_left = 200.0
margin_right = 224.0
margin_bottom = 24.0
hint_tooltip = "Arrange operators into groups,
based on modulation stacks to output."
icon = ExtResource( 37 )

[node name="Arrange4" type="Button" parent="Btn"]
margin_left = 230.0
margin_right = 254.0
margin_bottom = 24.0
hint_tooltip = "Arrange operators by type into columns."
icon = ExtResource( 33 )

[connection signal="timeout" from="FMPreview/Timer" to="FMPreview" method="_on_Timer_timeout"]
[connection signal="gui_input" from="LTab/LFO/WavePanel/Preview/Panel" to="LTab" method="_on_Preview_gui_input"]
[connection signal="item_selected" from="LTab/LFO/Sync" to="LTab" method="_on_Sync_item_selected"]
[connection signal="pressed" from="Btn/ReloadBank" to="IO" method="reopen_bank"]
[connection signal="pressed" from="Btn/Load" to="IO" method="open"]
[connection signal="pressed" from="Btn/Save" to="IO" method="save"]
[connection signal="pressed" from="Btn/Arrange0" to="." method="_on_Arrange_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Btn/Arrange1" to="." method="_on_Arrange_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Btn/Arrange3" to="." method="_on_Arrange_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Btn/Arrange2" to="." method="_on_Arrange_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Btn/Arrange4" to="." method="_on_Arrange_pressed" binds= [ 4 ]]

[editable path="Kanban/Column0"]
